--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -73,105 +73,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clContactEdit"
-            android:layout_width="351dp"
-            android:layout_height="318dp"
-            android:background="#F0ECEC"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="@+id/button3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <Button
-                android:id="@+id/btnCancelEdit"
-                android:layout_width="wrap_content"
-                android:layout_height="46dp"
-                android:backgroundTint="#B43737"
-                android:onClick="cancelEdit"
-                android:text="X"
-                android:textColor="#FAFAFA"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btnEditContact"
-                app:layout_constraintTop_toBottomOf="@+id/etContactNumber" />
-
-            <TextView
-                android:id="@+id/tvEditContact"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:backgroundTint="#FBFAFA"
-                android:fontFamily="sans-serif-black"
-                android:text="EDIT"
-                android:textAlignment="center"
-                android:textColor="#070707"
-                android:textSize="35sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tvPerson"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="#FFFFFF"
-                android:fontFamily="sans-serif-black"
-                android:text="Contact"
-                android:textAlignment="center"
-                android:textColor="#070707"
-                android:textSize="25sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvEditContact" />
-
-            <EditText
-                android:id="@+id/etContactName"
-                android:layout_width="318dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:ems="10"
-                android:hint="Contact Name"
-                android:inputType="text"
-                android:textColor="#070707"
-                android:textColorHint="#616161"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.484"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvPerson" />
-
-            <EditText
-                android:id="@+id/etContactNumber"
-                android:layout_width="317dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="16dp"
-                android:ems="10"
-                android:hint="Phone Number"
-                android:inputType="number"
-                android:textColor="#070707"
-                android:textColorHint="#616161"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etContactName" />
-
-            <Button
-                android:id="@+id/btnEditContact"
-                android:layout_width="171dp"
-                android:layout_height="46dp"
-                android:backgroundTint="#83CBEB"
-                android:onClick="addContact"
-                android:text="EDIT"
-                android:textColor="#121111"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etContactNumber"
-                tools:layout_editor_absoluteX="32dp" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
         <Button
             android:id="@+id/button"
             android:layout_width="145dp"
@@ -183,7 +84,7 @@
             android:text="@string/add_location"
             android:textColor="#000000"
             android:textSize="34sp"
-            android:onClick="addContact"
+            android:onClick="showContactInput"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintStart_toStartOf="parent" />
@@ -212,6 +113,126 @@
             app:layout_constraintTop_toTopOf="@+id/button3"
             app:srcCompat="@drawable/cal" />
 
+        <ScrollView
+            android:id="@+id/svContactList"
+            android:layout_width="0dp"
+            android:layout_height="535dp"
+            android:layout_marginTop="20dp"
+            android:visibility="visible"
+            app:layout_constraintBottom_toTopOf="@+id/button3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.333"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+            <LinearLayout
+                android:id="@+id/listOfContacts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp" />
+        </ScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clContactEdit"
+            android:layout_width="351dp"
+            android:layout_height="318dp"
+            android:background="#F0ECEC"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/button3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/btnCancelEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="46dp"
+                android:backgroundTint="#B43737"
+                android:onClick="cancelEdit"
+                android:text="X"
+                android:textColor="#FAFAFA"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnEditContact"
+                app:layout_constraintTop_toBottomOf="@+id/txtContactNumberEdit" />
+
+            <TextView
+                android:id="@+id/tvEditContact"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:backgroundTint="#FBFAFA"
+                android:fontFamily="sans-serif-black"
+                android:text="EDIT"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="35sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvPerson"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:text="Contact"
+                android:textAlignment="center"
+                android:textColor="#070707"
+                android:textSize="25sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvEditContact" />
+
+            <EditText
+                android:id="@+id/txtContactNameEdit"
+                android:layout_width="318dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:ems="10"
+                android:hint="Contact Name"
+                android:inputType="text"
+                android:textColor="#070707"
+                android:textColorHint="#616161"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.484"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvPerson" />
+
+            <EditText
+                android:id="@+id/txtContactNumberEdit"
+                android:layout_width="317dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="16dp"
+                android:ems="10"
+                android:hint="Phone Number"
+                android:inputType="number"
+                android:textColor="#070707"
+                android:textColorHint="#616161"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtContactNameEdit" />
+
+            <Button
+                android:id="@+id/btnEditContact"
+                android:layout_width="171dp"
+                android:layout_height="46dp"
+                android:backgroundTint="#83CBEB"
+                android:onClick="showContactInput"
+                android:text="EDIT"
+                android:textColor="#121111"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtContactNumberEdit"
+                tools:layout_editor_absoluteX="32dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clContactInput"
             android:layout_width="351dp"
@@ -235,7 +256,7 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
+                app:layout_constraintTop_toBottomOf="@+id/txtAddContactNumber"
                 app:layout_constraintVertical_bias="0.512" />
 
             <TextView
@@ -256,7 +277,6 @@
                 android:id="@+id/textView8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="#FFFFFF"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/addContactInfoActivity2Title"
                 android:textAlignment="center"
@@ -267,7 +287,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <EditText
-                android:id="@+id/editTextText4"
+                android:id="@+id/txtAddContactName"
                 android:layout_width="318dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="28dp"
@@ -283,7 +303,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
             <EditText
-                android:id="@+id/editTextNumber"
+                android:id="@+id/txtAddContactNumber"
                 android:layout_width="317dp"
                 android:layout_height="45dp"
                 android:layout_marginTop="20dp"
@@ -296,7 +316,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.529"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
+                app:layout_constraintTop_toBottomOf="@+id/txtAddContactName" />
 
             <Button
                 android:id="@+id/btnAddContact"
@@ -310,42 +330,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnCancelContact"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+                app:layout_constraintTop_toBottomOf="@+id/txtAddContactNumber" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ScrollView
-            android:id="@+id/svContactList"
-            android:layout_width="405dp"
-            android:layout_height="554dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginEnd="3dp"
-            android:padding="10dp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/button3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/button7"
-                    android:layout_width="match_parent"
-                    android:layout_height="68dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-                    android:backgroundTint="#F4F1F1"
-                    android:onClick="editContact"
-                    android:padding="15dp"
-                    android:text="Micky"
-                    android:textColor="#0B0B0B"
-                    android:textSize="24sp" />
-
-            </LinearLayout>
-        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
